[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/Itens/Crystal_Portal_Collectable_2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Itens/crysta_portal_collectable 2png.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Itens/crysta_portal_collectable 2_2.png.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 16.9978

[node name="Crystal_Portal_Collectable_2" type="Area2D"]
collision_layer = 256
script = ExtResource( 1 )

[node name="Cyrstal_Portal_Collectable_2_AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="Crystal_Portal_Collectable_2_Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Crystal_Portal_2_Notifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.128514, -0.0642586 )
scale = Vector2( 1.71967, 1.7004 )
[connection signal="body_entered" from="." to="." method="_on_Crystal_Portal_Collectable_2_body_entered"]
